# wechat-login-mock

./: .flake8  .gitignore  Pipfile  README.md  gunicorn_server.py  gunicorn_server.sh  manage.py  pyproject.toml
cgi_bin/: apps.py  urls.py  views.py
common/: utils.py
sns/: apps.py  urls.py  views.py
wechat/: asgi.py  settings.py  urls.py  wsgi.py
