[tool.poetry]
name = "wechat-login-mock"
version = "0.1.2"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.16.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
fast-dev-cli = {version=">=0.8.0", python=">=3.10"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
